--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,13 @@
             <version>7.10.2</version>
 
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.0-rc1</version>
+        </dependency>
+
     </dependencies>
 </project>
