--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,12 @@
             <version>7.18.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.29.0</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
