--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>5.3.0</version> <!-- or your current RestAssured version -->
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 </project>
